--- a/ios/EcoKart/Info.plist
+++ b/ios/EcoKart/Info.plist
@@ -69,6 +69,9 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Rubik-Italic-VariableFont_wght.ttf</string>
+		<string>Rubik-VariableFont_wght.ttf</string>
+		<string>Poppins-LightItalic.ttf</string>
 	</array>
 </dict>
 </plist>
