font family fixed

--- a/ios/EcoKart/Info.plist
+++ b/ios/EcoKart/Info.plist
@@ -72,6 +72,7 @@
 		<string>Rubik-Italic-VariableFont_wght.ttf</string>
 		<string>Rubik-VariableFont_wght.ttf</string>
 		<string>Poppins-LightItalic.ttf</string>
+		<string>Macondo-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
