--- a/ios/EcoKart/Info.plist
+++ b/ios/EcoKart/Info.plist
@@ -73,6 +73,11 @@
 		<string>Rubik-VariableFont_wght.ttf</string>
 		<string>Poppins-LightItalic.ttf</string>
 		<string>Macondo-Regular.ttf</string>
+		<string>Rubik-Black.ttf</string>
+		<string>Rubik-Bold.ttf</string>
+		<string>Rubik-ExtraBold.ttf</string>
+		<string>Rubik-Medium.ttf</string>
+		<string>Rubik-SemiBold.ttf</string>
 	</array>
 </dict>
 </plist>
