font family changed.

--- a/ios/EcoKart/Info.plist
+++ b/ios/EcoKart/Info.plist
@@ -78,6 +78,9 @@
 		<string>Rubik-ExtraBold.ttf</string>
 		<string>Rubik-Medium.ttf</string>
 		<string>Rubik-SemiBold.ttf</string>
+		<string>Rubik-Light.ttf</string>
+		<string>Rubik-LightItalic.ttf</string>
+		<string>Rubik-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
